--- a/index.html
+++ b/index.html
@@ -16,21 +16,30 @@
 		<hr/>
 	</div>
 	<div class="main">
-		<svg id="fig3"></svg>
+		<div class="fig3">
+			<div class="info">
+				<h3>SIZE</h3>
+				<h4>The majority of startups have at most 200 employees.</h4>
+				<p>Companies listed for each circle have at most <i>n</i> employees, where <i>n</i> is the number that appears when you hover over a circle. The radius of each circle represents the relative difference in company size between groups of companies. The width of each circumference is the relative amount of companies with <i>n</i> employees.</p>
+			</div>
+			<svg id="fig3"></svg>
+		</div>
 	</div>
 	<script>
 		// globals
-		var width = "95%";
+		var width = "75%";
 		var height = "500";
-		
 		var backgroundColor = "#f5f5f5";
 		
 		// scales
-		var employeesScale = d3.scaleSqrt().domain([0, 5000]).range([20, 500]);
+		var employeesScale = d3.scaleSqrt().domain([0, 5000]).range([20, 400]);
 		var companiesScale = d3.scaleLinear().domain([0, 53]).range([.2, 24]);
 		
 		/* BEGIN FIGURE 3 */
 		
+		var f3 = d3.select("#fig3").attr("width", width).attr("height", height).append("g").attr("transform", "translate(80,0)");
+		
+		var widthFloat = parseFloat(d3.select("#fig3").style("width"));
 		var rawData;
 		var companiesBySize;
 		
@@ -86,7 +95,7 @@
 						companies.forEach(function(i) {
 							f3.append("text")
 							.text(i)
-							.attr("x", "0")
+							.attr("x", "-60")
 							.attr("y", companies.indexOf(i)*16)
 							.attr("fill", "steelblue")
 							.attr("transform", "translate(10,20)");
@@ -95,7 +104,8 @@
 				//employees
 				labels.append("text")
 				.text(d.key)
-				.attr("x", -employeesScale(d.key)+companiesScale(d.values.length))
+				.style("font-size","14")
+				.attr("x", -employeesScale(d.key)+(.1*employeesScale(d.key)))
 				.attr("y", "-2")
 				.attr("fill", "steelblue");
 				//radius
@@ -114,10 +124,6 @@
 			}
 			
 		});
-		
-		var f3 = d3.select("#fig3").attr("width", width).attr("height", height);
-		
-		var widthFloat = parseFloat(f3.style("width"));
 		
 		
 		
