fix fig2's svg at the center

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 			</div>
 			<div id="title"></div>
-			<svg id="university" width="75%" height="900"></svg>
+			<svg id="university" width="75%" height="900" viewBox="0 0 960 600"></svg>
 		</div>
 
 		<div class="fig3">
