add d3 sankey plugin credit for fig2

--- a/index.html
+++ b/index.html
@@ -222,6 +222,8 @@
 		}
 
 		/*BEGIN FIGURE 2 */
+		/*D3 Sankey plugin
+		credit: https://github.com/d3/d3-sankey*/
 		var margin = {top: 150, right: 70, bottom: 50, left: 50};
 		var S_width = 800,S_height = 600;
 
